# simple_ml_app

./: .env.dev  .env.prod  .env.test  .pre-commit-config.yaml  .sops.yaml  Dockerfile  LICENSE  README.md  app.py  inference.py  load_secrets.py  main.py  public_key.asc  pyproject.toml  pytest.ini  secrets.yaml  settings.py  training.py
MLOpsLab1/: pyvenv.cfg
test/: test_api.py  test_load_secrets.py  test_main.py  test_settings.py
